<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/HomeLayout">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Residential Shuttle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="#ff186628"
        android:textColor="#ffffffff"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp" />

    <GridLayout
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:columnCount="2"
        android:rowCount="2"
        android:background="#ffacacac"
        android:id="@+id/NextBus1"
        android:backgroundTint="#ff1aff00"
        android:focusableInTouchMode="false">

        <TextView
            android:layout_width="100sp"
            android:layout_height="25sp"
            android:text="Leaves Union"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="0"
            android:textStyle="bold"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="150sp"
            android:layout_height="25sp"
            android:text="@string/next_bus_time_1"
            android:id="@+id/textView3"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="#ff000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="100sp"
            android:layout_height="25sp"
            android:text="Leaves in"
            android:id="@+id/textView4"
            android:layout_row="1"
            android:layout_column="0"
            android:textStyle="bold"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="150sp"
            android:layout_height="25sp"
            android:text="@string/time_remaining_1"
            android:id="@+id/textView5"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="#ff000000"
            android:textSize="15sp" />
    </GridLayout>



    <GridLayout
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_below="@+id/NextBus1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="2"
        android:background="#ffacacac"
        android:id="@+id/NextBus2">

        <TextView
            android:layout_width="100sp"
            android:layout_height="25sp"
            android:text="Leaves Union"
            android:id="@+id/textView6"
            android:layout_row="0"
            android:layout_column="0"
            android:textStyle="bold"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="150sp"
            android:layout_height="25sp"
            android:text="@string/next_bus_time_2"
            android:id="@+id/textView7"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="#ff000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="100sp"
            android:layout_height="25sp"
            android:text="Leaves in"
            android:id="@+id/textView8"
            android:layout_row="1"
            android:layout_column="0"
            android:textStyle="bold"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="150sp"
            android:layout_height="25sp"
            android:text="@string/time_remaining_2"
            android:id="@+id/textView9"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="#ff000000"
            android:textSize="15sp" />

    </GridLayout>

    <GridLayout
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_below="@+id/NextBus2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="2"
        android:background="#ffacacac"
        android:id="@+id/NextBus3">

        <TextView
            android:layout_width="100sp"
            android:layout_height="25sp"
            android:text="Leaves Union"
            android:id="@+id/textView10"
            android:layout_row="0"
            android:layout_column="0"
            android:textStyle="bold"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="150sp"
            android:layout_height="25sp"
            android:text="@string/next_bus_time_3"
            android:id="@+id/textView11"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="#ff000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="100sp"
            android:layout_height="25sp"
            android:text="Leaves in"
            android:id="@+id/textView12"
            android:layout_row="1"
            android:layout_column="0"
            android:textStyle="bold"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="150sp"
            android:layout_height="25sp"
            android:text="@string/time_remaining_3"
            android:id="@+id/textView13"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="#ff000000"
            android:textSize="15sp" />

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check Full Schedule"
        android:id="@+id/button"
        android:layout_below="@+id/NextBus3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

</RelativeLayout>